--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.7.2
+cloudinary==1.36.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.11
+django-filter==23.5
 gunicorn==20.1.0
 psycopg2==2.9.9
 sqlparse==0.4.4
+urllib3==1.26.18
 whitenoise==5.3.0
