--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
 cloudinary==1.36.0
+crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.11
+django-crispy-forms==2.1
 django-filter==24.1
 gunicorn==20.1.0
 psycopg2==2.9.9
